--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,37 @@ html {
     scroll-behavior: smooth;
 }
 
+.nav-link {
+  text-decoration: none;
+  padding: 20px 0px;
+  margin: 0px 20px;
+  display: inline-block;
+  position: relative;
+  opacity: 1;
+}
+
+.nav-link:hover {
+  opacity: 1;
+}
+
+.nav-link::before {
+  transition: 300ms;
+  height: 2px;
+  content: "";
+  position: absolute;
+  background-color: #FF7A42;
+}
+
+.nav-link-ltr::before {
+  width: 0%;
+  bottom: 10px;
+}
+
+.nav-link-ltr:hover::before {
+  width: 100%;
+}
+
+
 .swiper {
     width: 100%;
     height: 100%;
@@ -16,7 +47,7 @@ html {
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    /* background: #fff; */
   
     /* Center slide text vertically */
     display: -webkit-box;
